tests/test-dirs/upstream-typing-recovery/original-tests/label_missing.compilers.reference
File "label_missing.ml", line 1:
Error: Multiple errors were encountered
File "label_missing.ml", line 12, characters 8-17:
12 | let _ = { x = 10}
             ^^^^^^^^^
  Some record fields are undefined: y z
File "label_missing.ml", line 16, characters 8-32:
16 | let _ = {x = 10; y = 10; y = 11}
             ^^^^^^^^^^^^^^^^^^^^^^^^
  The record field label y is defined several times
File "label_missing.ml", line 20, characters 17-19:
20 | let x : string = 10
                      ^^
  The constant 10 has type int but an expression was expected of type string
